--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <h3>Dewi</h3>
     <p>This is a test for Jenkins CI/CD pipeline</p>
     <p> This is a test for the CD pipeline</p>
+    <p> This is a test a new commit</p>
 </body>
 </html>
