--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <p>This is a test for Jenkins CI/CD pipeline</p>
     <p> This is a test for the CD pipeline</p>
     <p> This is a test a new commit</p>
+    <p> wrong commit</p>
 </body>
 </html>
