fix issue with formatting

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <h2>Learner's name</h2>
     <h3>Some Changes</h3>
     <h3>Dewi</h3>
-    <h2>This is a test for Jenkins CI/CD pipeline<h2>
+    <h2>This is a test for Jenkins CI/CD pipeline</h2>
     <p> This is a test for the CD pipeline</p>
     <p> This is a test a new commit</p>
-    <h2> This is a test for Jenkins CI/CD pipeline 2<h2>
+    <h2> This is a test for Jenkins CI/CD pipeline 2</h2>
     <p> This is a test for the CD pipeline</p>
     <p> This is a test a new commit</p>
 
